Overlapping symbols css fix

--- a/src/common/Common.css
+++ b/src/common/Common.css
@@ -1,7 +1,3 @@
-#root {
-    height: auto;
-}
-
 .infoText {
     text-align: center;
     font-size: 70px;
@@ -119,6 +115,8 @@
 .imageFormLabel, .symbolFormLabel {
     margin-right: 0;
     margin-left: 0;
+    align-content: center;
+    justify-content: center;
 }
 
 .imageNotSelected, .symbolNotSelected {
